<resources>
    <string name="app_name">Pipe Major\'s Helper</string>
    <string name="new_user_welcome">Welcome! Please enter your name and band info below:</string>
    <string name="name">Name</string>
    <string name="band_name">Band Name</string>
    <string name="roster">Roster</string>
    <string name="events">Events</string>
    <string name="music">Music</string>
    <string name="main">Main</string>
    <string name="start">Start</string>
    <string name="pmh_logo">PMH Logo</string>
    <string name="year_joined">Year Joined:</string>

    <string-array name="ranks">
        <item>Pipe Major</item>
        <item>Drum Major</item>
        <item>Pipe Sergeant</item>
        <item>Pipe Corporal</item>
        <item>Drum Corporal</item>
        <item>Pipe Lance Corporal</item>
        <item>Drum Lance Corporal</item>
        <item>Piper</item>
        <item>Drummer</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_manage_your_music"><![CDATA[View & manage your music]]></string>
    <string name="view_manage_your_events"><![CDATA[View & manage your events]]></string>
    <string name="view_manage_your_roster"><![CDATA[View & manage your roster]]></string>
    <string name="set_tune_list">SET TUNE LIST</string>
    <string name="enter_new_set_name">Enter New Set Name</string>
    <string name="select_tunes_below">Select tunes below:</string>

</resources>
